# Checheci-Car-Leasing

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  CarFactory.cpp  CarFactory.h  Chechech-Car-Leasing.sln  Chechech-Car-Leasing.vcxproj  Chechech-Car-Leasing.vcxproj.filters  Display.cpp  Display.h  FileHandler.cpp  FileHandler.h  LICENSE  LeasingCar.cpp  LeasingCar.h  LeasingCars.txt  LoginHandler.cpp  LoginHandler.h  RentedCars.txt  RentingCar.cpp  RentingCar.h  RentingCars.txt  main.cpp  main.h  test.txt
CCLA/x64/Debug/: CCLA.exe.recipe  vc143.idb
CCLA/x64/Debug/CCLA.tlog/: CCLA.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Chechech.2E4BD6EC/x64/Debug/: Chechech-Car-Leasing.exe.recipe  vc143.idb
Chechech.2E4BD6EC/x64/Debug/Chechech.2E4BD6EC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chechech-Car-Leasing.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Files/: AvailableCars.txt  LeasedCars.txt  LeasingCars.txt  RentedCars.txt  RentingCars.txt  SoldCars.txt  Users.txt  temp.txt
